turso-test-runner/tests/snapshot_tests/sorting/snapshots/sorting__order-by-index-with-range.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      WHERE price BETWEEN 10 AND 100
      ORDER BY price;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_price

BYTECODE
addr  opcode           p1  p2  p3  p4                p5  comment
   0  Init              0  15   0                     0  Start at 15
   1  OpenRead          0   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   2  OpenRead          1   3   0  k(2,B)             0  index=idx_products_price, root=3, iDb=0
   3  Integer          10   4   0                     0  r[4]=10
   4  SeekGE            1  14   4                     0  key=[4..4]
   5  Integer         100   4   0                     0  r[4]=100
   6    IdxGT           1  14   4                     0  key=[4..4]
   7    DeferredSeek    1   0   0                     0
   8    IdxRowId        1   1   0                     0  r[1]=cursor 1 for index idx_products_price.rowid
   9    Column          0   1   2                     0  r[2]=products.name
  10    Column          0   2   3                     0  r[3]=products.price
  11    RealAffinity    3   0   0                     0
  12    ResultRow       1   3   0                     0  output=r[1..3]
  13  Next              1   6   0                     0
  14  Halt              0   0   0                     0
  15  Transaction       0   1   7                     0  iDb=0 tx_mode=Read
  16  Goto              0   1   0                     0
